--- a/app/src/main/res/layout/meditation_fragment.xml
+++ b/app/src/main/res/layout/meditation_fragment.xml
@@ -24,61 +24,44 @@
             android:id="@+id/meditation_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
             android:layout_marginTop="210sp"
-            android:layout_alignParentEnd="true"
-            android:layout_marginEnd="35dp"
-            android:textColor="#4F7282"
+            android:layout_marginEnd="40dp"
+            android:fontFamily="@font/myriad_pro_regular"
             android:text="Meditation"
-            android:textStyle="bold"
-            android:fontFamily="@font/myriad_pro_regular"
-            android:textSize="30sp" />
+            android:textColor="#4F7282"
+            android:textSize="30sp"
+            android:textStyle="bold" />
 
         <TextView
-            android:id="@+id/med_def1"
-            android:layout_width="match_parent"
+            android:id="@+id/mediationDescription"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="5sp"
-            android:layout_alignParentEnd="true"
-            android:layout_marginEnd="20sp"
-            android:text="Meditation isn't about"
-            android:fontFamily="@font/myriad_pro_regular"
-            android:textAlignment="textEnd"
-            android:textColor="#4F7282"
             android:layout_below="@id/meditation_text"
-            />
-
-        <TextView
-            android:id="@+id/med_def2"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
-            android:layout_marginEnd="20sp"
-            android:text="becoming a different person, a"
-            android:fontFamily="@font/myriad_pro_regular"
-            android:textAlignment="textEnd"
-            android:textColor="#4F7282"
-            android:layout_below="@id/med_def1"
-            />
-
-        <TextView
-            android:id="@+id/med_def3"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
-            android:layout_marginEnd="20sp"
-            android:textAlignment="textStart"
+            android:layout_centerHorizontal="true"
             android:layout_marginStart="20sp"
-            android:text="new person, or even better person. It's all about training in awareness and getting a healthy
-sense of perspective. You're not trying to turn off your thoughts or feelings, you're learning to observe them without judgement,
-and eventually you start to better understand."
+            android:layout_marginTop="36dp"
+            android:layout_marginEnd="111dp"
             android:fontFamily="@font/myriad_pro_regular"
-            android:textColor="#4F7282"
-            android:layout_below="@id/med_def2"
-            />
+            android:text="@string/Meditation_Description"
+            android:textAlignment="textStart"
+            android:textColor="@color/colorPrimary"
+            android:textSize="20sp" />
+
+        <TextView
+            android:id="@+id/mediationDescriptionSource"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/mediationDescription"
+            android:layout_centerHorizontal="true"
+            android:textSize="10sp"
+            android:text="----- Patanjali Yoga Sutra 2.2 -----"
+            android:textColor="@color/colorPrimary" />
 
         <RelativeLayout
             android:id="@+id/med_channel1_layout"
-            android:layout_below="@id/med_def3"
+            android:layout_below="@id/mediationDescriptionSource"
             android:layout_marginTop="20sp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
@@ -257,7 +240,7 @@ and eventually you start to better understand."
                 android:paddingStart="15sp"
                 android:fontFamily="@font/century_gothic"
                 android:paddingEnd="35sp"
-                android:text="Channel 2"
+                android:text="Coming Soon"
                 android:textColor="#fff"
                 android:textSize="15sp"
                 android:textStyle="bold" />
